--- a/src/frontend/src/content/docs/integrations/databases/mongodb/mongodb-host.mdx
+++ b/src/frontend/src/content/docs/integrations/databases/mongodb/mongodb-host.mdx
@@ -253,7 +253,7 @@ from pymongo import MongoClient
 import os
 
 # Get connection properties
-connection_uri = os.getenv("ConnectionStrings:mongodb")
+connection_uri = os.getenv("ConnectionStrings__mongodb")
 database_name = os.getenv("MONGODB_DATABASENAME")
 
 # Create MongoDB client
