--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-cosmos-db/azure-cosmos-db-host.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-cosmos-db/azure-cosmos-db-host.mdx
@@ -266,7 +266,7 @@ The preceding code configures the Linux-based preview Cosmos DB emulator contain
 
 If you're new to [Bicep](https://learn.microsoft.com/azure/azure-resource-manager/bicep/overview), it's a domain-specific language for defining Azure resources. With Aspire, you don't need to write Bicep by-hand, instead the provisioning APIs generate Bicep for you. When you publish your app, the generated Bicep is output alongside the manifest file. When you add an Azure Cosmos DB resource, the following Bicep is generated:
 
-```bicep title="Generated Bicep — cosmos.bicep
+```bicep title="Generated Bicep — cosmos.bicep"
 @description('The location for the resource(s) to be deployed.')
 param location string = resourceGroup().location
 
