--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-service-bus/azure-service-bus-client.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-service-bus/azure-service-bus-client.mdx
@@ -78,7 +78,7 @@ Then the correct code to add the Service Bus topic in your client-consuming prog
 builder.AddAzureServiceBusClient(connectionName: "myTopic");
 ```
 
-For more information, see [Add Azure Service Bus resource](#add-azure-service-bus-resource) and [Add Azure Service Bus topic and subscription](#add-azure-service-bus-topic-and-subscription).
+For more information, see [Add Azure Service Bus resource](/integrations/cloud/azure/azure-service-bus/azure-service-bus-host/#add-azure-service-bus-resource) and [Add Azure Service Bus topic and subscription](/integrations/cloud/azure/azure-service-bus/azure-service-bus-host/#add-azure-service-bus-topic-and-subscription).
 
 ### Add keyed Service Bus client
 
