--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-web-pubsub/azure-web-pubsub-client.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-web-pubsub/azure-web-pubsub-client.mdx
@@ -31,7 +31,7 @@ builder.AddAzureWebPubSubServiceClient(connectionName: "web-pubsub");
 <Aside type="tip">
   The `connectionName` parameter must match the name used when adding the Web
   PubSub resource in the AppHost project. For more information, see [Add an
-  Azure Web PubSub resource](#add-an-azure-web-pubsub-resource).
+  Azure Web PubSub resource](/integrations/cloud/azure/azure-web-pubsub/azure-web-pubsub-host/#add-an-azure-web-pubsub-resource).
 </Aside>
 
 After adding the `WebPubSubServiceClient`, you can retrieve the client instance using dependency injection:
