--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-ai-search/azure-ai-search-get-started.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-ai-search/azure-ai-search-get-started.mdx
@@ -77,6 +77,26 @@ builder.AddAzureSearchClient(connectionName: "search");
 > [!TIP]
 > The `connectionName` parameter must match the name used when adding the Azure AI Search resource in the AppHost project.
 
+### Use injected Azure AI Search properties
+
+In the AppHost, when you used the `WithReference` method to pass an Azure AI Search resource to a consuming client project, Aspire injects several configuration properties that you can use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called `search` becomes `SEARCH_URI`.
+
+Use the `GetValue()` method to obtain these environment variables in consuming projects:
+
+```csharp title="C# — Obtain configuration properties"
+string searchUri = builder.Configuration.GetValue<string>("SEARCH_URI");
+```
+
+<Aside type="tip">
+    The full set of properties that Aspire injects is available in the client integration documentation. For more information, see [Properties of the Azure AI Search resources](/integrations/cloud/azure/azure-ai-search/azure-ai-search-client/#properties-of-the-azure-ai-search-resources).
+</Aside>
+
+For full details on using the client integration, see [Azure AI Search Client integration](/integrations/cloud/azure/azure-ai-search/azure-ai-search-client/).
+
+## Use Azure AI Search resources in client code
+
 After adding the `SearchIndexClient`, you can retrieve the client instance using dependency injection:
 
 ```csharp
@@ -85,8 +105,6 @@ public class ExampleService(SearchIndexClient indexClient)
     // Use indexClient
 }
 ```
-
-For full details on using the client integration, see [Azure AI Search Client integration](/integrations/cloud/azure/azure-ai-search/azure-ai-search-client/).
 
 ## Next steps
 
