--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-cache-redis/azure-cache-redis-client.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-cache-redis/azure-cache-redis-client.mdx
@@ -37,6 +37,34 @@ For more information, see:
 - [StackExchange.Redis documentation](https://stackexchange.github.io/StackExchange.Redis/) for examples on using the `IConnectionMultiplexer`.
 - [Dependency injection in .NET](https://learn.microsoft.com/dotnet/core/extensions/dependency-injection) for details on dependency injection.
 
+## Properties of the Azure Cache for Redis resources
+
+When you use the `WithReference` method to pass an Azure Cache for Redis resource from the AppHost project to a consuming client project, several properties are available to use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Host` property of a resource called `redis` becomes `REDIS_HOST`.
+
+### Azure Managed Redis
+
+The Azure Managed Redis resource exposes the following connection properties:
+
+| Property Name | Description                                 |
+| ------------- | ------------------------------------------- |
+| `Host`        | The Redis server hostname                   |
+| `Port`        | The Redis server port (default: `10000`)    |
+| `Uri`         | The connection URI with TLS (`rediss://`)   |
+
+When access key authentication is enabled:
+
+| Property Name | Description                                 |
+| ------------- | ------------------------------------------- |
+| `Password`    | The access key from Key Vault               |
+
+For example, if you reference an Azure Managed Redis resource named `redis` in your AppHost project, the following environment variables will be available in the consuming project:
+
+- `REDIS_HOST`
+- `REDIS_PORT`
+- `REDIS_URI`
+
 ## Add Redis distributed cache
 
 For caching scenarios, you can add a Redis-based distributed cache using the `AddRedisDistributedCache` method:
