--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-cosmos-db/azure-cosmos-db-client.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-cosmos-db/azure-cosmos-db-client.mdx
@@ -37,6 +37,54 @@ public class ExampleService(MyDbContext context)
 
 For more information on using Entity Framework Core with Azure Cosmos DB, see the [Examples for Azure Cosmos DB for NoSQL SDK for .NET](https://learn.microsoft.com/ef/core/providers/cosmos/?tabs=dotnet-core-cli).
 
+## Properties of the Azure Cosmos DB resources
+
+When you use the `WithReference` method to pass an Azure Cosmos DB resource from the AppHost project to a consuming client project, several properties are available to use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called `cosmos` becomes `COSMOS_URI`.
+
+### Azure Cosmos DB account
+
+The Azure Cosmos DB account resource exposes the following connection properties:
+
+| Property Name      | Description                                                      |
+| ------------------ | ---------------------------------------------------------------- |
+| `Uri`              | The account endpoint URI                                         |
+
+When access key authentication is enabled (via `WithAccessKeyAuthentication()`):
+
+| Property Name      | Description                                                      |
+| ------------------ | ---------------------------------------------------------------- |
+| `Uri`              | The account endpoint URI                                         |
+| `AccountKey`       | The primary access key (retrieved from Key Vault)                |
+| `ConnectionString` | The full connection string (retrieved from Key Vault)            |
+
+### Azure Cosmos DB database
+
+The Azure Cosmos DB database resource inherits all properties from its parent account and adds:
+
+| Property Name  | Description           |
+| -------------- | --------------------- |
+| `DatabaseName` | The name of the database |
+
+### Azure Cosmos DB container
+
+The Azure Cosmos DB container resource inherits all properties from its parent database and adds:
+
+| Property Name   | Description           |
+| --------------- | --------------------- |
+| `ContainerName` | The name of the container |
+
+For example, if you reference a database resource named `db` in your AppHost project, the following environment variables will be available in the consuming project:
+
+- `DB_URI`
+- `DB_DATABASENAME`
+
+When access key authentication is enabled, additional environment variables are available:
+
+- `DB_ACCOUNTKEY`
+- `DB_CONNECTIONSTRING`
+
 ### Configuration
 
 The Aspire Microsoft Entity Framework Core Cosmos DB integration provides multiple options to configure the Azure Cosmos DB connection based on the requirements and conventions of your project.
