--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-event-hubs/azure-event-hubs-get-started.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-event-hubs/azure-event-hubs-get-started.mdx
@@ -63,6 +63,26 @@ In the `Program.cs` file of your client-consuming project, call the `AddAzureEve
 builder.AddAzureEventHubProducerClient(connectionName: "event-hubs");
 ```
 
+### Use injected Azure Event Hubs properties
+
+In the AppHost, when you used the `WithReference` method to pass an Azure Event Hubs resource to a consuming client project, Aspire injects several configuration properties that you can use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called `eventhubs` becomes `EVENTHUBS_URI`.
+
+Use the `GetValue()` method to obtain these environment variables in consuming projects:
+
+```csharp title="C# — Obtain configuration properties"
+string eventHubsHost = builder.Configuration.GetValue<string>("EVENTHUBS_HOST");
+string eventHubsUri = builder.Configuration.GetValue<string>("EVENTHUBS_URI");
+string eventHubName = builder.Configuration.GetValue<string>("MESSAGES_EVENTHUBNAME");
+```
+
+<Aside type="tip">
+    The full set of properties that Aspire injects depends on whether you passed an Azure Event Hubs namespace, hub, or consumer group resource. For more information, see [Properties of the Azure Event Hubs resources](/integrations/cloud/azure/azure-event-hubs/azure-event-hubs-client/#properties-of-the-azure-event-hubs-resources).
+</Aside>
+
+## Use Azure Event Hubs resources in client code
+
 You can then retrieve the client instance using dependency injection. For example, to retrieve your client from an example service:
 
 ```csharp
