--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-openai/azure-openai-get-started.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-openai/azure-openai-get-started.mdx
@@ -85,6 +85,24 @@ builder.AddAzureOpenAIClient(connectionName: "openai");
 > [!TIP]
 > The `connectionName` parameter must match the name used when adding the OpenAI resource in the AppHost project.
 
+### Use injected Azure OpenAI properties
+
+In the AppHost, when you used the `WithReference` method to pass an Azure OpenAI resource to a consuming client project, Aspire injects several configuration properties that you can use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called `openai` becomes `OPENAI_URI`.
+
+Use the `GetValue()` method to obtain these environment variables in consuming projects:
+
+```csharp title="C# — Obtain configuration properties"
+string openaiUri = builder.Configuration.GetValue<string>("OPENAI_URI");
+```
+
+<Aside type="tip">
+    The full set of properties that Aspire injects depends on whether you passed an Azure OpenAI service or deployment resource. For more information, see [Properties of the Azure OpenAI resources](/integrations/cloud/azure/azure-openai/azure-openai-client/#properties-of-the-azure-openai-resources).
+</Aside>
+
+## Use Azure OpenAI client in client code
+
 After adding the `AzureOpenAIClient`, you can retrieve the client instance using dependency injection:
 
 ```csharp
