--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-service-bus/azure-service-bus-client.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-service-bus/azure-service-bus-client.mdx
@@ -80,6 +80,60 @@ builder.AddAzureServiceBusClient(connectionName: "myTopic");
 
 For more information, see [Add Azure Service Bus resource](/integrations/cloud/azure/azure-service-bus/azure-service-bus-host/#add-azure-service-bus-resource) and [Add Azure Service Bus topic and subscription](/integrations/cloud/azure/azure-service-bus/azure-service-bus-host/#add-azure-service-bus-topic-and-subscription).
 
+## Properties of the Azure Service Bus resources
+
+When you use the `WithReference` method to pass an Azure Service Bus resource from the AppHost project to a consuming client project, several properties are available to use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called `servicebus` becomes `SERVICEBUS_URI`.
+
+### Azure Service Bus namespace
+
+The Azure Service Bus namespace resource exposes the following connection properties:
+
+| Property Name | Description                |
+| ------------- | -------------------------- |
+| `Host`        | The namespace hostname     |
+| `Uri`         | The service endpoint URI   |
+
+In emulator mode, additional properties are available:
+
+| Property Name      | Description                                |
+| ------------------ | ------------------------------------------ |
+| `Host`             | The local emulator host                    |
+| `Port`             | The local emulator port                    |
+| `Uri`              | The service bus URI                        |
+| `ConnectionString` | The full connection string for the emulator |
+
+### Azure Service Bus queue
+
+The Azure Service Bus queue resource inherits all properties from its parent namespace and adds:
+
+| Property Name | Description        |
+| ------------- | ------------------ |
+| `QueueName`   | The queue name     |
+
+### Azure Service Bus topic
+
+The Azure Service Bus topic resource inherits all properties from its parent namespace and adds:
+
+| Property Name | Description        |
+| ------------- | ------------------ |
+| `TopicName`   | The topic name     |
+
+### Azure Service Bus subscription
+
+The Azure Service Bus subscription resource inherits all properties from its parent topic and adds:
+
+| Property Name      | Description            |
+| ------------------ | ---------------------- |
+| `SubscriptionName` | The subscription name  |
+
+For example, if you reference a queue resource named `queue` in your AppHost project, the following environment variables will be available in the consuming project:
+
+- `QUEUE_HOST`
+- `QUEUE_URI`
+- `QUEUE_QUEUENAME`
+
 ### Add keyed Service Bus client
 
 There might be situations where you want to register multiple `ServiceBusClient` instances with different connection names. To register keyed Service Bus clients, call the `AddKeyedAzureServiceBusClient` method:
