--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-storage-queues/azure-storage-queues-client.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-storage-queues/azure-storage-queues-client.mdx
@@ -29,6 +29,38 @@ public class ExampleService(QueueServiceClient client)
 }
 ```
 
+## Properties of the Azure Queue Storage resources
+
+When you use the `WithReference` method to pass an Azure Queue Storage resource from the AppHost project to a consuming client project, several properties are available to use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called `queues` becomes `QUEUES_URI`.
+
+### Azure Queue Storage
+
+The Azure Queue Storage resource exposes the following connection properties:
+
+| Property Name | Description                   |
+| ------------- | ----------------------------- |
+| `Uri`         | The queue service endpoint    |
+
+In emulator mode, an additional property is available:
+
+| Property Name      | Description                                |
+| ------------------ | ------------------------------------------ |
+| `ConnectionString` | The full connection string for the emulator |
+
+### Azure Queue Storage queue
+
+The Azure Queue Storage queue resource inherits all properties from its parent storage and adds:
+
+| Property Name | Description        |
+| ------------- | ------------------ |
+| `QueueName`   | The queue name     |
+
+For example, if you reference a Queue Storage resource named `queues` in your AppHost project, the following environment variables will be available in the consuming project:
+
+- `QUEUES_URI`
+
 ### Configuration
 
 The Azure Queue Storage integration provides multiple options to configure the `QueueServiceClient`.
