--- a/src/frontend/src/content/docs/integrations/cloud/azure/azure-storage-tables/azure-storage-tables-client.mdx
+++ b/src/frontend/src/content/docs/integrations/cloud/azure/azure-storage-tables/azure-storage-tables-client.mdx
@@ -29,6 +29,30 @@ public class ExampleService(TableServiceClient client)
 }
 ```
 
+## Properties of the Azure Table Storage resources
+
+When you use the `WithReference` method to pass an Azure Table Storage resource from the AppHost project to a consuming client project, several properties are available to use in the consuming project.
+
+Aspire exposes each property as an environment variable named `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called `tables` becomes `TABLES_URI`.
+
+### Azure Table Storage
+
+The Azure Table Storage resource exposes the following connection properties:
+
+| Property Name | Description                   |
+| ------------- | ----------------------------- |
+| `Uri`         | The table service endpoint    |
+
+In emulator mode, an additional property is available:
+
+| Property Name      | Description                                |
+| ------------------ | ------------------------------------------ |
+| `ConnectionString` | The full connection string for the emulator |
+
+For example, if you reference a Table Storage resource named `tables` in your AppHost project, the following environment variables will be available in the consuming project:
+
+- `TABLES_URI`
+
 ### Configuration
 
 The Azure Table Storage integration provides multiple options to configure the `TableServiceClient`.
