Corrections to the AI integration docs.

--- a/src/frontend/src/content/docs/integrations/ai/github-models/github-models-get-started.mdx
+++ b/src/frontend/src/content/docs/integrations/ai/github-models/github-models-get-started.mdx
@@ -23,10 +23,10 @@ import githubLightIcon from '@assets/icons/github-light-icon.png';
 
 [GitHub Models](https://docs.github.com/github-models) provides access to various AI models including OpenAI's GPT models, DeepSeek, Microsoft's Phi models, and other leading AI models, all accessible through GitHub's infrastructure. The Aspire GitHub Models integration enables you to connect to GitHub Models from your applications for prototyping and production scenarios.
 
-In this introduction, you'll see how to install and use the Aspire GitHub Models integrations in a simple configuration. If you already have this knowledge, see [GitHub Models hosting integration](../github-models-host/) for full reference details.
+In this introduction, you'll see how to install and use the Aspire GitHub Models integrations in a simple configuration. If you already have this knowledge, see [GitHub Models hosting integration](/integrations/ai/github-models/github-models-host/) for full reference details.
 
 <Aside type="note">
-    To follow this guide, you must have created an Aspire solution to work with. To learn how to do that, see [Build your first Aspire app](../../../../get-started/first-app/).
+    To follow this guide, you must have created an Aspire solution to work with. To learn how to do that, see [Build your first Aspire app](/get-started/first-app/).
 </Aside>
 
 ## Set up hosting integration
@@ -144,6 +144,6 @@ public class ChatService(OpenAIClient client)
 
 ## See also
 
-- [GitHub Models hosting integration](../github-models-host/)
-- [GitHub Models client integration](../github-models-client/)
+- [GitHub Models hosting integration](/integrations/ai/github-models/github-models-host/)
+- [GitHub Models client integration](/integrations/ai/github-models/github-models-client/)
 - [GitHub Models documentation](https://docs.github.com/github-models)
