--- a/src/frontend/src/content/docs/integrations/ai/openai/openai-client.mdx
+++ b/src/frontend/src/content/docs/integrations/ai/openai/openai-client.mdx
@@ -1,6 +1,7 @@
 ---
 title: OpenAI client integration
 description: Full reference for the Aspire OpenAI client integration.
+next: false
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -120,6 +121,6 @@ builder.AddOpenAIClient("chat", configureOptions: o => o.NetworkTimeout = TimeSp
 
 ## See also
 
-- [Get started with the OpenAI integration](../openai-get-started/)
-- [OpenAI hosting integration](../openai-host/)
+- [Get started with the OpenAI integration](/integrations/ai/openai/openai-get-started/)
+- [OpenAI hosting integration](/integrations/ai/openai/openai-host/)
 - [OpenAI documentation](https://openai.com/)
