--- a/src/frontend/src/content/docs/integrations/ai/openai/openai-get-started.mdx
+++ b/src/frontend/src/content/docs/integrations/ai/openai/openai-get-started.mdx
@@ -28,10 +28,10 @@ import openaiLightIcon from '@assets/icons/openai-light-icon.png';
 - Reference those model resources from projects to get strongly-named connection strings.
 - Consume those connection strings with the `Aspire.OpenAI` component to obtain an `OpenAIClient` and (optionally) an `IChatClient`.
 
-In this introduction, you'll see how to install and use the Aspire OpenAI integrations in a simple configuration. If you already have this knowledge, see [OpenAI hosting integration](../openai-host/) for full reference details.
+In this introduction, you'll see how to install and use the Aspire OpenAI integrations in a simple configuration. If you already have this knowledge, see [OpenAI hosting integration](/integrations/ai/openai/openai-host/) for full reference details.
 
 <Aside type="note">
-    To follow this guide, you must have created an Aspire solution to work with. To learn how to do that, see [Build your first Aspire app](../../../../get-started/first-app/).
+    To follow this guide, you must have created an Aspire solution to work with. To learn how to do that, see [Build your first Aspire app](/get-started/first-app/).
 </Aside>
 
 ## Set up hosting integration
@@ -108,6 +108,6 @@ builder.AddOpenAIClient("openai")
 
 ## See also
 
-- [OpenAI hosting integration](../openai-host/)
-- [OpenAI client integration](../openai-client/)
+- [OpenAI hosting integration](/integrations/ai/openai/openai-host/)
+- [OpenAI client integration](/integrations/ai/openai/openai-client/)
 - [OpenAI documentation](https://openai.com/)
