--- a/src/frontend/src/content/docs/integrations/ai/openai/openai-host.mdx
+++ b/src/frontend/src/content/docs/integrations/ai/openai/openai-host.mdx
@@ -166,6 +166,6 @@ The OpenAI model resource combines the parent properties above and adds the foll
 
 ## See also
 
-- [Get started with the OpenAI integration](../openai-get-started/)
-- [OpenAI client integration](../openai-client/)
+- [Get started with the OpenAI integration](/integrations/ai/openai/openai-get-started/)
+- [OpenAI client integration](/integrations/ai/openai/openai-client/)
 - [OpenAI documentation](https://openai.com/)
