--- a/src/frontend/src/content/docs/integrations/ai/github-models/github-models-client.mdx
+++ b/src/frontend/src/content/docs/integrations/ai/github-models/github-models-client.mdx
@@ -1,6 +1,7 @@
 ---
 title: GitHub Models client integration
 description: Full reference for the Aspire GitHub Models client integration.
+next: false
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -145,6 +146,34 @@ For organization-specific requests:
 Endpoint=https://models.github.ai/orgs/{organization}/inference;Key={api_key};Model={model_name};DeploymentId={model_name}
 ```
 
+## Connection properties
+
+When you reference a GitHub Model resource using `WithReference`, the following connection properties are made available to the consuming project:
+
+### GitHub Model
+
+The GitHub Model resource exposes the following connection properties:
+
+| Property Name  | Description                                                                                    |
+| -------------- | ---------------------------------------------------------------------------------------------- |
+| `Uri`          | The GitHub Models inference endpoint URI, with the format `https://models.github.ai/inference` |
+| `Key`          | The API key (PAT or GitHub App token) for authentication                                       |
+| `ModelName`    | The model identifier for inference requests, for instance `openai/gpt-4o-mini`                 |
+| `Organization` | The organization attributed to the request (available when configured)                         |
+
+**Example properties:**
+
+```
+Uri: https://models.github.ai/inference
+ModelName: openai/gpt-4o-mini
+```
+
+<Aside type="note">
+  Aspire exposes each property as an environment variable named
+  `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called
+  `chat` becomes `CHAT_URI`.
+</Aside>
+
 ## Rate limits and costs
 
 <Aside type="caution">
@@ -178,7 +207,7 @@ HTTP requests to the GitHub Models API are automatically traced when using the A
 
 ## See also
 
-- [Get started with the GitHub Models integration](../github-models-get-started/)
-- [GitHub Models hosting integration](../github-models-host/)
+- [Get started with the GitHub Models integration](/integrations/ai/github-models/github-models-get-started/)
+- [GitHub Models hosting integration](/integrations/ai/github-models/github-models-host/)
 - [GitHub Models documentation](https://docs.github.com/github-models)
 - [GitHub Models API documentation](https://docs.github.com/rest/models/inference)
