--- a/src/frontend/src/content/docs/integrations/ai/github-models/github-models-host.mdx
+++ b/src/frontend/src/content/docs/integrations/ai/github-models/github-models-host.mdx
@@ -127,36 +127,8 @@ GitHub Models supports various AI models. Use the strongly-typed `GitHubModel` c
 
 Check the [GitHub Models documentation](https://docs.github.com/github-models) for more information about these models and their capabilities.
 
-## Connection properties
-
-When you reference a GitHub Model resource using `WithReference`, the following connection properties are made available to the consuming project:
-
-### GitHub Model
-
-The GitHub Model resource exposes the following connection properties:
-
-| Property Name  | Description                                                                                    |
-| -------------- | ---------------------------------------------------------------------------------------------- |
-| `Uri`          | The GitHub Models inference endpoint URI, with the format `https://models.github.ai/inference` |
-| `Key`          | The API key (PAT or GitHub App token) for authentication                                       |
-| `ModelName`    | The model identifier for inference requests, for instance `openai/gpt-4o-mini`                 |
-| `Organization` | The organization attributed to the request (available when configured)                         |
-
-**Example properties:**
-
-```
-Uri: https://models.github.ai/inference
-ModelName: openai/gpt-4o-mini
-```
-
-<Aside type="note">
-  Aspire exposes each property as an environment variable named
-  `[RESOURCE]_[PROPERTY]`. For instance, the `Uri` property of a resource called
-  `chat` becomes `CHAT_URI`.
-</Aside>
-
 ## See also
 
-- [Get started with the GitHub Models integration](../github-models-get-started/)
-- [GitHub Models client integration](../github-models-client/)
+- [Get started with the GitHub Models integration](/integrations/ai/github-models/github-models-get-started/)
+- [GitHub Models client integration](/integrations/ai/github-models/github-models-client/)
 - [GitHub Models documentation](https://docs.github.com/github-models)
